# MagnumImguiPort

./: CMakeLists.txt  Example.cpp  Example.h  MagnumImgui.cpp  MagnumImgui.h  README.md  README.org
src/: CMakeLists.txt  Example.cpp  Example.h  MagnumImGui.cpp
